--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,8 @@ dependencies:
   # geocode: 1.0.1
   # another_flushbar: ^1.10.28
   # sliding_up_panel: ^2.0.0+1
+  provider: ^6.0.2
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
