--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,8 @@ dependencies:
   # sliding_up_panel: ^2.0.0+1
   provider: ^6.0.2
   intl: ^0.17.0
+  firebase_core: ^1.12.0
+  firebase_auth: ^3.3.6
 
 dev_dependencies:
   flutter_test:
