--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   intl: ^0.17.0
   firebase_core: ^1.12.0
   firebase_auth: ^3.3.6
+  flutter_spinkit: ^5.1.0
 
 dev_dependencies:
   flutter_test:
