--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,7 @@ dependencies:
   firebase_core: ^1.12.0
   firebase_auth: ^3.3.6
   flutter_spinkit: ^5.1.0
+  fluttertoast: ^8.0.8
 
 dev_dependencies:
   flutter_test:
