--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: famfam
+name: flutter_famfam
 description: A new Flutter project.
 
 # The following line prevents the package from being accidentally published to
@@ -29,29 +29,13 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  carousel_slider: ^4.0.0
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  
-  # image carousel slider
   cupertino_icons: ^1.0.2
-  # google_maps_flutter: ^2.1.1
-  # geolocator: ^8.0.5
-  # location: ^4.2.0
-  # roundcheckbox: ^2.0.4+1
-  # favorite_button: ^0.0.4
-  # #dots indicator
-  # smooth_page_indicator: ^0.3.0-nullsafety.0
-  # baseflow_plugin_template:
-  #   git:
-  #     url: git://github.com/Baseflow/baseflow_plugin_template.git
-  #     ref: v2.0.0-nullsafety
-  # geocoding: ^2.0.2
-  # dio: ^4.0.4
-  # geocode: 1.0.1
-  # another_flushbar: ^1.10.28
-  # sliding_up_panel: ^2.0.0+1
+  flutter_svg: ^1.0.3
+  sliding_up_panel: ^2.0.0+1
 
 dev_dependencies:
   flutter_test:
@@ -76,11 +60,11 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
   assets:
-    - assets/images/
+     - assets/icons/
+     - assets/images/
+  #   - images/a_dot_ham.jpeg
+
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
 
@@ -92,11 +76,17 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
+  fonts:
+    - family: Merriweather
+      fonts:
+        - asset: assets/fonts/Merriweather-Regular.ttf
+        - asset: assets/fonts/Merriweather-Italic.ttf
+        - asset: assets/fonts/Merriweather-Black.ttf
+        - asset: assets/fonts/Merriweather-BlackItalic.ttf
+        - asset: assets/fonts/Merriweather-Bold.ttf
+        - asset: assets/fonts/Merriweather-BoldItalic.ttf
+        - asset: assets/fonts/Merriweather-Light.ttf
+        - asset: assets/fonts/Merriweather-LightItalic.ttf
   #         style: italic
   #   - family: Trajan Pro
   #     fonts:
