--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,7 @@ dependencies:
   firebase_auth: ^3.3.6
   flutter_spinkit: ^5.1.0
   fluttertoast: ^8.0.8
+  sqflite: ^2.0.2
 
 dev_dependencies:
   flutter_test:
