--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,10 @@ dependencies:
   intl: ^0.17.0
   firebase_core: ^1.12.0
   firebase_auth: ^3.3.6
+  lite_rolling_switch: ^0.1.1
+  flutter_slidable: ^1.2.0
+  get_it: ^7.2.0
+
 
 dev_dependencies:
   flutter_test:
