--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,12 +30,17 @@ dependencies:
   flutter:
     sdk: flutter
   carousel_slider: ^4.0.0
+  
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   
   # image carousel slider
   cupertino_icons: ^1.0.2
+  # flutter_clean_calendar: ^1.1.0
+  table_calendar: ^3.0.0
+
+
   # google_maps_flutter: ^2.1.1
   # geolocator: ^8.0.5
   # location: ^4.2.0
@@ -63,6 +68,7 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^1.0.0
+  time_pickerr: ^1.0.5
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
