--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -68,6 +68,7 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation platform('com.google.firebase:firebase-bom:29.0.4')
     implementation 'com.google.firebase:firebase-analytics'
+    implementation "androidx.multidex:multidex:2.0.0"
 }
 
 apply plugin: 'com.google.gms.google-services'
