--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,9 +56,12 @@ dependencies:
   intl: ^0.17.0
   firebase_core: ^1.12.0
   firebase_auth: ^3.3.6
+  cloud_firestore: ^3.1.9
+  firebase_storage: ^10.2.8
   flutter_spinkit: ^5.1.0
   fluttertoast: ^8.0.8
   sqflite: ^2.0.2
+  image_picker: ^0.8.4+9
 
 dev_dependencies:
   flutter_test:
