--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   firebase_auth: ^3.3.6
   flutter_spinkit: ^5.1.0
   fluttertoast: ^8.0.8
+  polls: ^1.0.1
 
 dev_dependencies:
   flutter_test:
