--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -69,7 +69,8 @@ dev_dependencies:
   # rules and activating additional ones.
   flutter_lints: ^1.0.0
   time_pickerr: ^1.0.5
-
+  dio: ^4.0.4
+  
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
