--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,7 +67,8 @@ dependencies:
   flutter_slidable: ^1.2.0
   get_it: ^7.2.0
   table_calendar: ^3.0.0
-
+ 
+  loader_overlay: ^2.0.6
 dev_dependencies:
   flutter_test:
     sdk: flutter
