--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
      <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
      <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
    <application
-        android:label="flutter_application_1"
+        android:label="FamFam"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
