--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,8 +67,15 @@ dependencies:
   flutter_slidable: ^1.2.0
   get_it: ^7.2.0
   table_calendar: ^3.0.0
- 
+  flutter_launcher_icons: ^0.9.2
+  rename: ^2.0.1
   loader_overlay: ^2.0.6
+
+flutter_icons:
+  android: true
+  image_path: "assets/images/logo.png"
+
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
